trying to prevent diagram from going out of the box

--- a/style.css
+++ b/style.css
@@ -12,3 +12,6 @@
   border-style: double;
   border-width: 5px;
 }
+#machine{
+  border: 1px solid black;
+}
